<?xml version="1.0"?>
<package>

  <name>niut_msgs</name>
  <version>0.0.0</version>
  <description>Messages used for Person Detection and Tracking</description>

  <maintainer email="gregoire@milliez.fr">Grégoire Milliez</maintainer>
  
  <license>TODO</license>
  
  <author email="gregoire@milliez.fr">Gregoire Milliez</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  
</package>
