<?xml version="1.0"?>
<package>
  <name>toaster_visualizer</name>
  <version>0.0.0</version>
  <description>The plug package</description>

  <maintainer email="glacroix@laas.fr">glacroix</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>toaster_msgs</build_depend>
  <run_depend>toaster_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

	 <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>  
  
  
  <build_depend>tinyxml</build_depend>


<run_depend>tinyxml</run_depend>
<build_depend>cmake_modules</build_depend>
  <export>
   

  </export>
</package>
